creditas-sf/force-app/main/default/objects/ProductOfInterest__c/ProductOfInterest__c.object-meta.xml
<CustomObject>
    <description>Objeto que representa os Produtos de Interesse relacionados a um Deal.</description>
    <label>Produto de Interesse</label>
    <nameField>
        <label>Nome do Produto de Interesse</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos de Interesse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>