creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/AcquisitionModel__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionModel__c</fullName>
    <description>Modelo de Aquisição</description>
    <label>Modelo de Aquisição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Troca</fullName>
            </value>
            <value>
                <fullName>Consignado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>