creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/CurrentKM__c.field-meta.xml
<CustomField>
    <fullName>CurrentKM__c</fullName>
    <description>KM Atual do Veículo / Produto de Interesse (Ex.: 100.000)</description>
    <label>KM atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>