creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deal com o qual o Produto de Interesse está relacionado.</description>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Produtos de Interesse</relationshipLabel>
    <relationshipName>Produtos_de_Interesse</relationshipName>
    <type>Lookup</type>
</CustomField>