creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <description>Lead ID</description>
    <label>Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>