creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/LinkToAdmin__c.field-meta.xml
<CustomField>
    <fullName>LinkToAdmin__c</fullName>
    <description>Link para o Veículo / Produto de Interesse no Sistema Admin (Ex.: https://admin.crmvolanty.com/#/anunciado/detalhes/6451306068705280/informacao)</description>
    <label>Link do Admin</label>
    <type>Url</type>
</CustomField>