creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/LinkToMeeting__c.field-meta.xml
<CustomField>
    <fullName>LinkToMeeting__c</fullName>
    <description>Link que mostra a localização da Visita no Google Maps (Ex.: https://goo.gl/maps/WwaVskRjx6fJ212HA)</description>
    <label>Link visita google maps</label>
    <type>Url</type>
</CustomField>