creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/LinkToScheduleMeeting__c.field-meta.xml
<CustomField>
    <fullName>LinkToScheduleMeeting__c</fullName>
    <description>Link para Agendar Visita no Sistema Admin (Ex.: https://admin.crmvolanty.com/#/agenda?leadId=61ae85c99ff84d31fb254fa9&amp;name=Lucas+Castro&amp;phone=5521984222377&amp;carId=6451306068705280&amp;email=lucascastrosouza%40yahoo.com.br&amp;type=)</description>
    <label>Link para agendar visita</label>
    <type>Url</type>
</CustomField>