creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/LinkToVehicle__c.field-meta.xml
<CustomField>
    <fullName>LinkToVehicle__c</fullName>
    <description>Link para o Veículo / Produto de Interesse no Portal Creditas Auto (Ex.: https://auto.creditas.com/comprar/hyundai/hb20/6451306068705280/hyundai-hb20-1.0-comfort-plus-12v-flex-4p-manual-39759km)</description>
    <label>Link do carro</label>
    <type>Url</type>
</CustomField>