creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/ManufacturingYear__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingYear__c</fullName>
    <description>Ano de Fabricação do Veículo / Produto de Interesse (Ex.: 2022)</description>
    <label>Ano de fabricação</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>