creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MaximumPrice__c.field-meta.xml
<CustomField>
    <fullName>MaximumPrice__c</fullName>
    <description>Máximo Preço - Compra</description>
    <label>Máximo Preço - Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>