creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MeetingAddress__c.field-meta.xml
<CustomField>
    <fullName>MeetingAddress__c</fullName>
    <description>Endereço onde o Cliente fará a Visita (Ex.: Av. Giovanni Gronchi, 5819 - Vila Andrade, São Paulo - SP [Estacionamento G2])</description>
    <label>Endereço da visita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>