creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MeetingConfirmation__c.field-meta.xml
<CustomField>
    <fullName>MeetingConfirmation__c</fullName>
    <description>Campo que indica se foi feito um contato com o Deal para confirmar a visita.</description>
    <inlineHelpText>Campo que indica se foi feito um contato com o Deal para confirmar a visita.</inlineHelpText>
    <label>Visita confirmada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNoConfirmation</valueSetName>
    </valueSet>
</CustomField>