creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MeetingLocation__c.field-meta.xml
<CustomField>
    <fullName>MeetingLocation__c</fullName>
    <description>Loja onde acontecerá a Visita do Cliente (Ex.: SP - Shopping Jardim Sul)

Obs.: Pode ser igual ou diferente de campo &quot;Loja&quot;</description>
    <inlineHelpText>Loja onde acontecerá a Visita do Cliente (Ex.: SP - Shopping Jardim Sul)

Obs.: Pode ser igual ou diferente de campo &quot;Loja&quot;</inlineHelpText>
    <label>Loja da visita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>