creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MeetingStatus__c.field-meta.xml
<CustomField>
    <fullName>MeetingStatus__c</fullName>
    <description>Status da Visita (Ex.: Agendada)</description>
    <label>Status da visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Iniciada</fullName>
            </value>
            <value>
                <fullName>Cancelamento automático</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>