creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MeetingTime__c.field-meta.xml
<CustomField>
    <fullName>MeetingTime__c</fullName>
    <description>Data e Hora da Visita (Ex.: 09/12/2021 15:00:00)

Obs.: Preenchido quando é Agendada no Site ou Admin</description>
    <label>Data/hora da visita</label>
    <type>DateTime</type>
</CustomField>