creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/MinimumPrice__c.field-meta.xml
<CustomField>
    <fullName>MinimumPrice__c</fullName>
    <description>Mínimo Preço - Compra</description>
    <label>Mínimo Preço - Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>