creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Modelo do Produto de Interesse (Ex.: HB20 - 1.0 COMFORT PLUS 12V FLEX 4P MANUAL)</description>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>