creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <description>Ano do Veículo / Produto de Interesse (Ex.: 2022)</description>
    <label>Ano do veículo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>