creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/Plate__c.field-meta.xml
<CustomField>
    <fullName>Plate__c</fullName>
    <description>Placa do Produto de Interesse (Ex.: LUH5716)</description>
    <label>Placa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>