creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/PriceID__c.field-meta.xml
<CustomField>
    <fullName>PriceID__c</fullName>
    <description>Price ID</description>
    <label>Price ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>