creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que vincula o Produto de Interesse ao Produto cadastrado.</description>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos de Interesse</relationshipLabel>
    <relationshipName>ProductOfInterest</relationshipName>
    <type>Lookup</type>
</CustomField>