creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/productId__c.field-meta.xml
<CustomField>
    <fullName>productId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ID do Produto de Interesse que será enviado pelo Mulesoft.</inlineHelpText>
    <label>ID do Produto</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>