creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Tipo de Produto de Interesse</description>
    <label>Tipo de produto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>