creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/StockVehicleID__c.field-meta.xml
<CustomField>
    <fullName>StockVehicleID__c</fullName>
    <description>ID do Veículo / Produto de Interesse no Estoque (Ex.: 6451310000000000)</description>
    <label>ID do veículo no estoque</label>
    <length>100</length>
    <type>Text</type>
</CustomField>