creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/TypeOfMeeting__c.field-meta.xml
<CustomField>
    <fullName>TypeOfMeeting__c</fullName>
    <description>Tipo de Visita (Online ou Presencial)</description>
    <label>Tipo de visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita Online</fullName>
            </value>
            <value>
                <fullName>Visita Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>