creditas-sf/force-app/main/default/objects/ProductOfInterest__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Versão do Produto de Interesse</description>
    <label>Versão</label>
    <length>100</length>
    <type>Text</type>
</CustomField>